# ChangeLog for net-mail/vlnx
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/vlnx/Attic/ChangeLog,v 1.11 2003/07/13 13:32:32 aliz Exp $

*vlnx-416e (13 Oct 2002)

  04 Jan 2002; Preston A. Elder <prez@gentoo.org> vlnx-416e.ebuild :
  Made ebuild satisfy virtual/virus

  04 Jan 2002; Martin Holzer <mholzer@gentoo.org> :
  Fixed SRC_URI.

  13 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Version bump to fix #1132 ... also cleaned up ebuild and stuff

*vlnx-414e-r2 (1 Feb 2002)

  07 Nov 2002; Mark Guertin <gerk@gentoo.org> vlnx-414e-r2.ebuild :
  removed depreciated ld.so

  28 Aug 2002; Ryan Phillips <rphillips@gentoo.org> :

  Changed install directory to /opt.
  Added an env.d/ file to update the path.
  Added a nostrip option so it doesn't mess with the executables.

  18 Mar 2002; Chad Huneycutt <chadh@gentoo.org>
  uvscan was complaining of missing library, which indeed was not being
  installed.  I updated the ebuild to install the library and also a man page.
  Unfortunately, uvscan still will not run, complaining that the program has
  been tampered with

*vlnx-414e-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.