@@ -1,7 +1,7 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 # Script Revised by Parag Mehta <pm@gentoo.org>
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/vlnx/Attic/vlnx-414e-r2.ebuild,v 1.15 2003/09/05 08:32:01 msterret Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/vlnx/Attic/vlnx-414e-r2.ebuild,v 1.16 2004/02/27 12:47:05 bazik Exp $
 
 MY_P=${PN}${PV}
 S=${WORKDIR}/${MY_P}
@@ -12,7 +12,7 @@ HOMEPAGE="http://www.mcafeeb2b.com/"
 
 SLOT="0"
 LICENSE="VirusScan"
-KEYWORDS="x86 sparc"
+KEYWORDS="-* x86"
 RESTRICT="nostrip"
 
 DEPEND=""
