@@ -1,8 +1,8 @@
-MD5 060f1cff970a0fb7389c07595511ae3c ChangeLog 674
 MD5 a611b198308506f59757d32c532b474b xfmail-1.5.3.ebuild 981
-MD5 4eea2dc7bbd31b865ce5b87bb3014c5c xfmail-1.5.4.ebuild 1096
-MD5 b3d2ac76eb0f1fe53debe52ac28a056e xfmail-1.5.4-r1.ebuild 1108
+MD5 7c1804d45696de7d8b043158262149f1 xfmail-1.5.4-r1.ebuild 1104
+MD5 29e27f472292b4851684d84efccbfb09 ChangeLog 770
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
+MD5 4eea2dc7bbd31b865ce5b87bb3014c5c xfmail-1.5.4.ebuild 1096
+MD5 69be169d9f01ce23d16f9cf5b398b526 files/digest-xfmail-1.5.4-r1 67
 MD5 af2f8bd250fae641a5934c15173048d9 files/digest-xfmail-1.5.3 65
 MD5 5cd490c9d4971d8f547a1496509b926a files/digest-xfmail-1.5.4 65
-MD5 69be169d9f01ce23d16f9cf5b398b526 files/digest-xfmail-1.5.4-r1 67
